# pds-global

./: README.md
communication_drone/: api_drone-PC-V2.md  api_drone-PC.md  sequence_drone.simp
cyu_project_references/Com_server/: CMakeLists.txt  ReadMe.md  install.txt
cyu_project_references/Com_server/include/: Abstract_Frame.h  Abstract_ThreadClass.h  Com_Mavlink.h  Com_SerialPort.h  Com_WifiPort.h  DataListener_Keyboard.h  Data_Bus.h  Data_Drone.h  Display_MainFrame.h  Display_Panel.h  Engine_mainLoop.h  PixhawkServer.h  Thread_SerialPort.h  global_variables.h
cyu_project_references/Com_server/lib/mavlink/ASLUAV/: ASLUAV.h
cyu_project_references/Com_server/lib/mavlink/common/: common.h  mavlink_msg_command_long.h
cyu_project_references/Com_server/src/: Abstract_ThreadClass.cpp  Com_Mavlink.cpp  Com_SerialPort.cpp  Com_WifiPort.cpp  DataListener_Keyboard.cpp  Data_Bus.cpp  Display_MainFrame.cpp  Display_Panel.cpp  Engine_mainLoop.cpp  Thread_SerialPort.cpp
cyu_project_references/Com_server/test/: ReadMe.md  TestDroneRemoteControl.cpp
cyu_project_references/Com_server/test/include/: Abstract_ThreadClass.h  Cmd_ControlThread.h  Com_Serial.h  Com_SerialReadingThread.h  Com_SerialWritingThread.h  Com_Wifi.h  Data_Drone.h  Other_Constant.h  PixhawkServer.h  Tools_SDL2.h  global_variables.h
cyu_project_references/Com_server/test/include/trash/: Display_IHM.h
cyu_project_references/Com_server/test/snippet/: TestBash.cpp  TestWritingCommand.cpp  note_qGroundControl.cpp
cyu_project_references/Com_server/test/src/: Abstract_ThreadClass.cpp  Cmd_ControlThread.cpp  Com_Serial.cpp  Com_SerialReadingThread.cpp  Com_SerialWritingThread.cpp  Data_Drone.cpp
docs/tutos/: install_PostgreSQL.txt  install_blaar_et_Com_server.md
scripts/: compile_com_server.sh  install_and_configure.sh
scripts/subScripts/: install_blaar_libs_ubuntu.sh
specs/: specs.md
